fix footnote overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ summary {
     cursor: pointer;
 }
 
-details p {
+details a {
     word-break: break-all;
 }
 
